--- a/style.css
+++ b/style.css
@@ -1,4 +1,33 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    background-color: black;
+    font-family: arial;
+    color: white;
+}
 
+h1{
+    color: grey;
+    font-family: verdana;
+}
+
+.maindiv {
+    background-color: white;
+    color: black;
+    width: 500px;
+    padding: 20px;
+    border-radius: 25px;
+    margin: auto;
+}
+
+#information_form {
+    margin-left: 85px;
+}
+
+.result_number {
+    background-color: #FF0;
+}
+
+#rate_val {
+    border: none;
+    width: 50px;
+}
 
